Pantalla para agregar registro

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="blue1">#3f779f</color>
+    <color name="statusN">#d9d9d9</color>
+    <color name="statusS">#69dc32</color>
+    <color name="statusD">#ff8f36</color>
+    <color name="statusE">#ff4c2b</color>
+    <color name="transparent">#80FFFFFF</color>
 </resources>
