--- a/app/src/main/res/layout/activity_employee_main_list.xml
+++ b/app/src/main/res/layout/activity_employee_main_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_background"
     tools:context=".EmployeeMainListActivity">
 
     <LinearLayout
@@ -48,6 +49,7 @@
         <SearchView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corners"
             android:layout_margin="10dp" />
 
         <RelativeLayout
@@ -73,8 +75,12 @@
             android:layout_height="match_parent">
 
             <ListView
+                android:id="@+id/lv_apparts"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="0dp">
+
             </ListView>
 
 <!--            <Button-->
@@ -91,14 +97,12 @@
                 android:id="@+id/floatingActionButton"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginBottom="30dp"
+                android:layout_alignParentBottom="true"
                 android:layout_marginRight="20dp"
+                android:layout_marginBottom="30dp"
                 android:backgroundTint="@color/blue1"
-                android:clickable="true"
-                app:srcCompat="@drawable/bars_solid"
-                android:tint="#FFFFFF"
+                app:srcCompat="@drawable/plus_solid"
                 />
 
         </RelativeLayout>
