Pantalla para agregar registro

--- a/app/src/main/res/layout/activity_employee_main_list.xml
+++ b/app/src/main/res/layout/activity_employee_main_list.xml
@@ -102,7 +102,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="30dp"
                 android:backgroundTint="@color/blue1"
-                app:srcCompat="@drawable/plus_solid"
+                app:srcCompat="@drawable/plus_solid_white"
                 />
 
         </RelativeLayout>
