--- a/app/src/main/res/menu/filter_menu.xml
+++ b/app/src/main/res/menu/filter_menu.xml
@@ -4,9 +4,15 @@
     android:layout_height="match_parent">
 
     <item android:id="@+id/opc1"
-        android:title="Nombre"/>
+        android:title="Numero"/>
 
     <item android:id="@+id/opc2"
-        android:title="Fecha"/>
+        android:title="Nombre"/>
+
+    <item android:id="@+id/opc3"
+        android:title="Mas recientes"/>
+
+    <item android:id="@+id/opc4"
+        android:title="Mas Antiguos"/>
 
 </menu>
