--- a/app/src/main/res/layout/widget_new_appart.xml
+++ b/app/src/main/res/layout/widget_new_appart.xml
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
-                android:hint="Descripcion"/>
+                android:hint="Desc."/>
 
         </RelativeLayout>
 
