reorganizacion del codigo

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -96,6 +96,7 @@
                     >
 
                     <EditText
+                        android:id="@+id/editTextUser"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="20dp"
@@ -104,6 +105,7 @@
                         />
 
                     <EditText
+                        android:id="@+id/editTextPassword"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="20dp"
@@ -112,6 +114,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/textViewMessage"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="16dp"
