--- a/app/src/main/res/layout/activity_employee_main_list.xml
+++ b/app/src/main/res/layout/activity_employee_main_list.xml
@@ -47,6 +47,7 @@
         </LinearLayout>
 
         <SearchView
+            android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_corners"
