--- a/app/src/main/res/layout/activity_employee_new_appart_view.xml
+++ b/app/src/main/res/layout/activity_employee_new_appart_view.xml
@@ -20,6 +20,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/imageViewBack"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_margin="10dp"
@@ -72,17 +73,19 @@
                         android:backgroundTint="#d9d9d9"
                         android:gravity="center">
 
-                        <TextView
+                        <EditText
                             android:id="@+id/textViewID"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="404"
+                            android:editable="false"
                             android:textColor="@android:color/black"
                             android:textSize="24sp" />
 
                     </RelativeLayout>
 
                     <ImageView
+                        android:id="@+id/imageViewEditId"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="15dp"
@@ -104,6 +107,7 @@
                         android:textSize="16dp"/>
 
                     <TextView
+                        android:id="@+id/textViewDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
@@ -111,6 +115,7 @@
                         android:textSize="16dp"/>
 
                     <ImageView
+                        android:id="@+id/imageViewEditDate"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="15dp"
@@ -127,6 +132,7 @@
                     android:layoutDirection="rtl">
 
                     <ImageView
+                        android:id="@+id/imageViewLoadContact"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="15dp"
@@ -134,6 +140,7 @@
                         app:tint="#8C8C8C" />
 
                     <EditText
+                        android:id="@+id/editTextClient"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="text"
@@ -143,6 +150,7 @@
                 </LinearLayout>
 
                 <EditText
+                    android:id="@+id/editTextPhone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number"
@@ -151,6 +159,7 @@
                     />
 
                 <EditText
+                    android:id="@+id/editTextInfo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
@@ -176,11 +185,15 @@
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
+                        android:backgroundTint="@color/blue1"
                         android:text="Agregar" />
 
                     <Button
+                        android:id="@+id/btnRemove"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
+                        android:backgroundTint="#d9d9d9"
+                        android:textColor="#787878"
                         android:text="Quitar"
                         android:layout_margin="10dp"/>
 
@@ -239,11 +252,15 @@
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
+                        android:backgroundTint="@color/green1"
                         android:text="Guardar" />
 
                     <Button
+                        android:id="@+id/btnCancel"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
+                        android:backgroundTint="#d9d9d9"
+                        android:textColor="#787878"
                         android:text="Cancelar"
                         android:layout_margin="10dp"/>
 
