--- a/app/src/main/res/menu/menu_personalizado.xml
+++ b/app/src/main/res/menu/menu_personalizado.xml
@@ -1,8 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/opcion1"
-        android:title="Opción 1" />
+        android:id="@+id/opc1"
+        android:title="Abono/Pago" />
     <item
-        android:id="@+id/opcion2"
-        android:title="Opción 2" />
+        android:id="@+id/opc2"
+        android:title="Editar" />
+    <item
+        android:id="@+id/opc3"
+        android:title="Eliminar" />
+    <item
+        android:id="@+id/opc4"
+        android:title="Tolerancia" />
+
 </menu>
